# rust-algorithms

./: .gitignore  Cargo.toml
crates/bubblesort/: Cargo.toml
crates/bubblesort/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  prng.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: sieve.rs
crates/crypto/examples/: factor.rs  fastexp.rs  gcdlcm.rs  primality.rs  rsa.rs  sieve.rs
crates/crypto/src/: factor.rs  fast_exp.rs  gcd_lcm.rs  lib.rs  primality.rs  rsa.rs  sieve_eratosthenes.rs
crates/dynprog/: Cargo.toml
crates/dynprog/examples/: branch_bound.rs  exhaustive.rs  rod.rs
crates/dynprog/src/: branch_bound.rs  exhaustive.rs  item.rs  lib.rs  rod.rs
crates/recursion/: Cargo.toml
crates/recursion/src/: lib.rs
crates/sorting/: Cargo.toml
crates/sorting/examples/: binary_search.rs  linear_search.rs  quicksort.rs
crates/sorting/src/: lib.rs  prng.rs
