[package]
name = "recursion"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

# [lib]
# bench = false

[[bin]]
name = "factorial"
path = "src/bin/factorial.rs"

[[bin]]
name = "fib"
path = "src/bin/fib.rs"

[[bin]]
name = "ktour"
path = "src/bin/knights_tour.rs"
