[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
anyhow.workspace = true


[lib]
bench = false

[[bin]]
name = "bsort"
path = "src/bin/bubblesort.rs"

[[bin]]
name = "qsort"
path = "src/bin/quicksort.rs"

[[bin]]
name = "csort"
path = "src/bin/countingsort.rs"
